working on hero section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,32 @@
         </div>
       </nav>
     </header>
-    <main id="main"></main>
+    <main>
+        <section id="hero" class="center">
+            <div class="hero-container"> 
+                <div class="bg-img">
+                      <img src="./assets/microphone.png" alt="">
+                </div>
+                <div class="hero-content">
+                    <h1 class="hero-head">TechWave</h1>
+                    <p class="text">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                    <div class="hero-buttons">
+                        <button class="hero-btn1 gradient flex"> 
+                            <img src="./assets/spotify.png" alt="Spotify logo">
+                            <span>Listen on Spotify</span>
+
+                        </button>
+                        <button class="hero-btn2 flex">
+                              <img src="./assets/message.png" alt="message logo">
+                            <span>Subscribe</span>
+                        </button>
+                    </div>
+                </div>         
+
+            </div>
+
+        </section>
+    </main>
     <footer id="footer"></footer>
   </body>
 </html>
