designed hero section

--- a/index.html
+++ b/index.html
@@ -1,68 +1,69 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>B13-A02-TECHWAVE</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body class="inter">
-    <header id="header" class="bg-color">
-      <nav class="navbar  container flex">
-        <h1 class="logo">Tech <span class="gradient">Wave</span></h1>
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Episodes</a></li>
-          <li><a href="#">Host</a></li>
-        </ul>
-        <button class="btn gradient">
-               Subscribe
-             <i class="fa-solid fa-arrow-right"></i>                  
-        </button>
-        <div class="menubar">
-            <i class="fa-solid fa-bars"></i>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>B13-A02-TECHWAVE</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body class="inter">
+  <header id="header" class="bg-color">
+    <nav class="navbar  container flex">
+      <h1 class="logo">Tech <span class="gradient">Wave</span></h1>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Episodes</a></li>
+        <li><a href="#">Host</a></li>
+      </ul>
+      <button class="btn gradient">
+        Subscribe
+        <i class="fa-solid fa-arrow-right"></i>
+      </button>
+      <div class="menubar">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section id="hero" >
+      <div class="hero-container">
+       <div class="image-container">
+         <div class="bg-img">
+          <img src="./assets/microphone.png" alt="">
+          <span class="badge">new</span>
         </div>
-      </nav>
-    </header>
-    <main>
-        <section id="hero" class="center">
-            <div class="hero-container"> 
-                <div class="bg-img">
-                      <img src="./assets/microphone.png" alt="">
-                </div>
-                <div class="hero-content">
-                    <h1 class="hero-head">TechWave</h1>
-                    <p class="text">Your daily dose of tech insights, productivity hacks, and personal growth</p>
-                    <div class="hero-buttons">
-                        <button class="hero-btn1 gradient flex"> 
-                            <img src="./assets/spotify.png" alt="Spotify logo">
-                            <span>Listen on Spotify</span>
+       </div>
+        <div class="hero-content">
+          <h1 class="hero-head">TechWave</h1>
+          <p class="text">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+          <div class="hero-buttons">
+            <button class="hero-btn1 gradient flex">
+              <img class="btn1-img" src="./assets/spotify.png" alt="Spotify logo">
+              <p>Listen on Spotify</p>
 
-                        </button>
-                        <button class="hero-btn2 flex">
-                              <img src="./assets/message.png" alt="message logo">
-                            <span>Subscribe</span>
-                        </button>
-                    </div>
-                </div>         
+            </button>
+            <button class="hero-btn2 flex">
+              <img src="./assets/message.png" alt="message logo">
+              <p>Subscribe</p>
+            </button>
+          </div>
+        </div>
 
-            </div>
+      </div>
 
-        </section>
-    </main>
-    <footer id="footer"></footer>
-  </body>
+    </section>
+  </main>
+  <footer id="footer"></footer>
+</body>
+
 </html>
