--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     </nav>
   </header>
   <main>
-    <section id="hero" >
+    <section id="hero">
       <div class="hero-container">
-       <div class="image-container">
-         <div class="bg-img">
-          <img src="./assets/microphone.png" alt="">
-          <span class="badge">new</span>
+        <div class="image-container">
+          <div class="bg-img">
+            <img src="./assets/microphone.png" alt="">
+            <span class="badge">new</span>
+          </div>
         </div>
-       </div>
         <div class="hero-content">
           <h1 class="hero-head">TechWave</h1>
           <p class="text">Your daily dose of tech insights, productivity hacks, and personal growth</p>
@@ -62,8 +62,39 @@
       </div>
 
     </section>
+
+    <section id="podcast">
+      <div class="podcast-container container ">
+        <h1>About the Podcast</h1>
+        <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>
+          We break down complex topics into digestible insights, explore productivity strategies that actually work,
+          and share stories of personal growth from industry leaders.</p>
+        <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+        <div class="card-container flex">
+          <div class="card ">
+            <h3>150K+ </h3>
+            <p>Monthly Listeners</p>
+          </div>
+          <div class="card">
+            <h3>200+</h3>
+            <p>Episodes Published</p>
+          </div>
+          <div class="card">
+            <h3>4.9★</h3>
+            <p>Average Rating</p>
+          </div>
+          <div class="card">
+            <h3>50+</h3>
+            <p>Industry Experts </p>
+          </div>
+        </div>
+      </div>
+
+    </section>
   </main>
-  <footer id="footer"></footer>
+  <footer id="footer">
+
+  </footer>
 </body>
 
 </html>
