--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <i class="fa-solid fa-arrow-right"></i>
       </button>
       <div class="menubar">
-        <i class="fa-solid fa-bars"></i>
+        <img src="./assets/hamburger-menu.png" alt="">
       </div>
     </nav>
   </header>
@@ -86,6 +86,43 @@
           <div class="card">
             <h3>50+</h3>
             <p>Industry Experts </p>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <section id="techwave">
+      <div class="takewave-container container">
+        <h1>Why Choose TechWave</h1>
+        <div class="tectwave-card-container">
+          <div class="tech-card">
+            <img src="./assets/headphone.png" alt="headphone">
+            <h3>Premium Audio Quality</h3>
+            <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering.
+              Every episode is mastered for optimal listening across all devices and platforms.</p>
+          </div>
+          <div class="tech-card">
+            <img src="./assets/device.png" alt="device">
+            <h3>Mobile Friendly</h3>
+            <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+          </div>
+          <div class="tech-card">
+            <img src="./assets/location.png" alt="location">
+            <h3>Global Community</h3>
+            <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+          </div>
+          <div class="tech-card">
+            <img src="./assets/exclusive.png" alt="exclusive">
+            <h3>Exclusive Interviews</h3>
+            <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures
+              exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and
+              success strategies.</p>
+          </div>
+          <div class="tech-card">
+            <img src="./assets/resource.png" alt="resource">
+            <h3>Rich Resources</h3>
+            <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
           </div>
         </div>
       </div>
