designed techwave with small device responsive

--- a/index.html
+++ b/index.html
@@ -1,137 +1,177 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>B13-A02-TECHWAVE</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>B13-A02-TECHWAVE</title>
-  <link rel="stylesheet" href="./style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet" />
-</head>
-
-<body class="inter">
-  <header id="header" class="bg-color">
-    <nav class="navbar  container flex">
-      <h1 class="logo">Tech <span class="gradient">Wave</span></h1>
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Episodes</a></li>
-        <li><a href="#">Host</a></li>
-      </ul>
-      <button class="btn gradient">
-        Subscribe
-        <i class="fa-solid fa-arrow-right"></i>
-      </button>
-      <div class="menubar">
-        <img src="./assets/hamburger-menu.png" alt="">
-      </div>
-    </nav>
-  </header>
-  <main>
-    <section id="hero">
-      <div class="hero-container">
-        <div class="image-container">
-          <div class="bg-img">
-            <img src="./assets/microphone.png" alt="">
-            <span class="badge">new</span>
+  <body class="inter">
+    <header id="header" class="bg-color">
+      <nav class="navbar container flex">
+        <h1 class="logo">Tech <span class="gradient">Wave</span></h1>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Episodes</a></li>
+          <li><a href="#">Host</a></li>
+        </ul>
+        <button class="btn gradient">
+          Subscribe
+          <i class="fa-solid fa-arrow-right"></i>
+        </button>
+        <div class="menubar">
+          <img src="./assets/hamburger-menu.png" alt="" />
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section id="hero">
+        <div class="hero-container">
+          <div class="image-container">
+            <div class="bg-img">
+              <img src="./assets/microphone.png" alt="" />
+              <span class="badge">new</span>
+            </div>
+          </div>
+          <div class="hero-content">
+            <h1 class="hero-head">TechWave</h1>
+            <p class="text">
+              Your daily dose of tech insights, productivity hacks, and personal
+              growth
+            </p>
+            <div class="hero-buttons">
+              <button class="hero-btn1 gradient flex">
+                <img
+                  class="btn1-img"
+                  src="./assets/spotify.png"
+                  alt="Spotify logo"
+                />
+                <p>Listen on Spotify</p>
+              </button>
+              <button class="hero-btn2 flex">
+                <img src="./assets/message.png" alt="message logo" />
+                <p>Subscribe</p>
+              </button>
+            </div>
           </div>
         </div>
-        <div class="hero-content">
-          <h1 class="hero-head">TechWave</h1>
-          <p class="text">Your daily dose of tech insights, productivity hacks, and personal growth</p>
-          <div class="hero-buttons">
-            <button class="hero-btn1 gradient flex">
-              <img class="btn1-img" src="./assets/spotify.png" alt="Spotify logo">
-              <p>Listen on Spotify</p>
+      </section>
 
-            </button>
-            <button class="hero-btn2 flex">
-              <img src="./assets/message.png" alt="message logo">
-              <p>Subscribe</p>
-            </button>
+      <section id="podcast">
+        <div class="podcast-container container">
+          <h1>About the Podcast</h1>
+          <p>
+            TechWave is your go-to podcast for staying ahead in the fast-paced
+            world of technology. <br />
+            We break down complex topics into digestible insights, explore
+            productivity strategies that actually work, and share stories of
+            personal growth from industry leaders.
+          </p>
+          <p>
+            Join thousands of young professionals and tech enthusiasts who start
+            their day with TechWave.
+          </p>
+          <div class="card-container flex">
+            <div class="card">
+              <h3>150K+</h3>
+              <p>Monthly Listeners</p>
+            </div>
+            <div class="card">
+              <h3>200+</h3>
+              <p>Episodes Published</p>
+            </div>
+            <div class="card">
+              <h3>4.9★</h3>
+              <p>Average Rating</p>
+            </div>
+            <div class="card">
+              <h3>50+</h3>
+              <p>Industry Experts</p>
+            </div>
           </div>
         </div>
+      </section>
 
-      </div>
-
-    </section>
-
-    <section id="podcast">
-      <div class="podcast-container container ">
-        <h1>About the Podcast</h1>
-        <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>
-          We break down complex topics into digestible insights, explore productivity strategies that actually work,
-          and share stories of personal growth from industry leaders.</p>
-        <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
-        <div class="card-container flex">
-          <div class="card ">
-            <h3>150K+ </h3>
-            <p>Monthly Listeners</p>
-          </div>
-          <div class="card">
-            <h3>200+</h3>
-            <p>Episodes Published</p>
-          </div>
-          <div class="card">
-            <h3>4.9★</h3>
-            <p>Average Rating</p>
-          </div>
-          <div class="card">
-            <h3>50+</h3>
-            <p>Industry Experts </p>
+      <section id="techwave">
+        <div class="takewave-container container">
+          <h1>Why Choose TechWave</h1>
+          <div class="techwave-card-container">
+            <div class="tech-card row-span2">
+              <div class="card-content">
+                <img
+                  class="card-img"
+                  src="./assets/headphone.png"
+                  alt="headphone"
+                />
+                <h3 class="card-head">Premium Audio Quality</h3>
+                <p class="card-text">
+                  Experience crystal-clear sound with professional-grade
+                  recording equipment and expert audio engineering. Every
+                  episode is mastered for optimal listening across all devices
+                  and platforms.
+                </p>
+              </div>
+            </div>
+            <div class="tech-card col-span2">
+              <div class="card-content">
+                <img src="./assets/device.png" alt="device" />
+                <h3>Mobile Friendly</h3>
+                <p>
+                  Listen on the go with seamless mobile experience and offline
+                  downloads.
+                </p>
+              </div>
+            </div>
+            <div class="tech-card col-span2">
+              <div class="card-content">
+                <img src="./assets/location.png" alt="location" />
+                <h3>Global Community</h3>
+                <p>
+                  Connect with tech enthusiasts from over 120 countries
+                  worldwide.
+                </p>
+              </div>
+            </div>
+            <div class="tech-card col-span2">
+              <div class="card-content">
+                <img src="./assets/exclusive.png" alt="exclusive" />
+                <h3>Exclusive Interviews</h3>
+                <p>
+                  Get unprecedented access to industry titans, startup founders,
+                  and tech visionaries. Our host secures exclusive conversations
+                  you won't find anywhere else, diving deep into their journeys,
+                  failures, and success strategies.
+                </p>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="card-content">
+                <img src="./assets/resource.png" alt="resource" />
+                <h3>Rich Resources</h3>
+                <p>
+                  Access show notes, transcripts, and additional learning
+                  materials for every episode.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-
-    </section>
-
-    <section id="techwave">
-      <div class="takewave-container container">
-        <h1>Why Choose TechWave</h1>
-        <div class="tectwave-card-container">
-          <div class="tech-card">
-            <img src="./assets/headphone.png" alt="headphone">
-            <h3>Premium Audio Quality</h3>
-            <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering.
-              Every episode is mastered for optimal listening across all devices and platforms.</p>
-          </div>
-          <div class="tech-card">
-            <img src="./assets/device.png" alt="device">
-            <h3>Mobile Friendly</h3>
-            <p>Listen on the go with seamless mobile experience and offline downloads.</p>
-          </div>
-          <div class="tech-card">
-            <img src="./assets/location.png" alt="location">
-            <h3>Global Community</h3>
-            <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
-          </div>
-          <div class="tech-card">
-            <img src="./assets/exclusive.png" alt="exclusive">
-            <h3>Exclusive Interviews</h3>
-            <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures
-              exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and
-              success strategies.</p>
-          </div>
-          <div class="tech-card">
-            <img src="./assets/resource.png" alt="resource">
-            <h3>Rich Resources</h3>
-            <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
-          </div>
-        </div>
-      </div>
-
-    </section>
-  </main>
-  <footer id="footer">
-
-  </footer>
-</body>
-
+      </section>
+    </main>
+    <footer id="footer"></footer>
+  </body>
 </html>
