--- a/index.html
+++ b/index.html
@@ -171,6 +171,112 @@
           </div>
         </div>
       </section>
+      <section id="features">
+        <div class="features-container container">
+          <h1>Featured Episodes</h1>
+          <div class="feature-card-container">
+            <div class="feature-card">
+              <div class="iframe-content">
+                <iframe
+                  width="380px"
+                  height="214px"
+                  src="https://www.youtube.com/embed/16PncZlSNds?si=uUcmew9rqqlSOKwH"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="
+                    accelerometer;
+                    autoplay;
+                    clipboard-write;
+                    encrypted-media;
+                    gyroscope;
+                    picture-in-picture;
+                    web-share;
+                  "
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <div class="text-content">
+                <h1>The Future of AI in Everyday Life</h1>
+                <p>
+                  Exploring how artificial intelligence is transforming our
+                  daily routines and what to expect in the next decade.
+                </p>
+                <div class="clock">
+                  <img src="./assets/clock.png" alt="clock" />
+                  <span>42 min</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="feature-card">
+              <div class="iframe-content">
+                <iframe
+                  width="380px"
+                  height="214px"
+                  src="https://www.youtube.com/embed/KD1Yo8a_Qis?si=GW8tN_Fcr3PHTaEh"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="
+                    accelerometer;
+                    autoplay;
+                    clipboard-write;
+                    encrypted-media;
+                    gyroscope;
+                    picture-in-picture;
+                    web-share;
+                  "
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
+             <div class="text-content">
+               <h1>Building Better Habits for Remote Work</h1>
+              <p>
+                Practical strategies for staying productive and maintaining
+                work-life balance in a remote environment.
+              </p>
+              <div class="clock">
+                <img src="./assets/clock.png" alt="clock" /><span>35 min</span>
+              </div>
+             </div>
+            </div>
+            <div class="feature-card">
+              <div class="iframe-content">
+                <iframe
+                  width="380px"
+                  height="214px"
+                  src="https://www.youtube.com/embed/ZOK-DU7vT0A?si=dwLHTJT2o2x-qDJh"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="
+                    accelerometer;
+                    autoplay;
+                    clipboard-write;
+                    encrypted-media;
+                    gyroscope;
+                    picture-in-picture;
+                    web-share;
+                  "
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
+
+             <div class="text-content">
+               <h1>Career Growth in Tech: A Roadmap</h1>
+              <p>
+                Expert advice on navigating your tech career from junior
+                developer to senior leadership roles.
+              </p>
+              <div class="clock">
+                <img src="./assets/clock.png" alt="clock" /><span>51 min</span>
+              </div>
+             </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer id="footer"></footer>
   </body>
