--- a/index.html
+++ b/index.html
@@ -230,16 +230,18 @@
                   allowfullscreen
                 ></iframe>
               </div>
-             <div class="text-content">
-               <h1>Building Better Habits for Remote Work</h1>
-              <p>
-                Practical strategies for staying productive and maintaining
-                work-life balance in a remote environment.
-              </p>
-              <div class="clock">
-                <img src="./assets/clock.png" alt="clock" /><span>35 min</span>
+              <div class="text-content">
+                <h1>Building Better Habits for Remote Work</h1>
+                <p>
+                  Practical strategies for staying productive and maintaining
+                  work-life balance in a remote environment.
+                </p>
+                <div class="clock">
+                  <img src="./assets/clock.png" alt="clock" /><span
+                    >35 min</span
+                  >
+                </div>
               </div>
-             </div>
             </div>
             <div class="feature-card">
               <div class="iframe-content">
@@ -263,16 +265,44 @@
                 ></iframe>
               </div>
 
-             <div class="text-content">
-               <h1>Career Growth in Tech: A Roadmap</h1>
-              <p>
-                Expert advice on navigating your tech career from junior
-                developer to senior leadership roles.
-              </p>
-              <div class="clock">
-                <img src="./assets/clock.png" alt="clock" /><span>51 min</span>
+              <div class="text-content">
+                <h1>Career Growth in Tech: A Roadmap</h1>
+                <p>
+                  Expert advice on navigating your tech career from junior
+                  developer to senior leadership roles.
+                </p>
+                <div class="clock">
+                  <img src="./assets/clock.png" alt="clock" /><span
+                    >51 min</span
+                  >
+                </div>
               </div>
-             </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="challenge">
+        <div class="challenge-container container">
+          <h1>Meet the Host</h1>
+          <div class="challenge-content">
+            <div class="image">
+              <img src="./assets/host.png" alt="" />
+            </div>
+            <div class="host-details">
+              <h2>Alex Kumar</h2>
+              <p class="text-regular">
+                Tech entrepreneur, productivity expert, and lifelong learner.
+                Alex has been in the tech industry for over 10 years, working
+                with startups and Fortune 500 companies. Through TechWave, Alex
+                shares insights from industry leaders and practical advice for
+                anyone looking to grow in tech.
+              </p>
+              <div class="social-logos">
+                <div><img src="./assets/linkedin.png" alt="" /></div>
+                <div><img src="./assets/x.png" alt="" /></div>
+                <div><img src="./assets/instagram.png" alt="" /></div>
+                <div><img src="./assets/youtube.png" alt="" /></div>
+              </div>
             </div>
           </div>
         </div>
