designed footer section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body class="inter">
     <header id="header" class="bg-color">
       <nav class="navbar container flex">
-        <h1 class="logo">Tech <span class="gradient">Wave</span></h1>
+        <h1 class="logo">Tech<span class="gradient">Wave</span></h1>
         <ul>
           <li><a href="#">About</a></li>
           <li><a href="#">Episodes</a></li>
@@ -308,6 +308,39 @@
         </div>
       </section>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer">
+      <div class="footer-container container ">
+        <h1 class="logo">Tech<span class="gradient">Wave</span></h1>
+        <div class="brand-container">
+           <ul>
+            <li>
+              <a href="#">
+                <img src="./assets/spotify.png" alt="">
+                <p>Spotify</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./assets/apple-podcast.png" alt="">
+                <p>Apple Podcasts</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./assets/youtube-podcast.png" alt="">
+                <p>YouTube</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./assets/twitter.png" alt="">
+                <p>Twitter</p>
+              </a>
+            </li>
+           </ul>  
+        </div>
+        <p>© 2026 TechWave Podcast. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
