fixed some issues

--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
           <li><a href="#">Host</a></li>
         </ul>
         <button class="btn gradient">
-          Subscribe
+          <span>Subscribe</span>
           <i class="fa-solid fa-arrow-right"></i>
         </button>
-        <div class="menubar">
+        <button class="menubar">
           <img src="./assets/hamburger-menu.png" alt="" />
-        </div>
+        </button>
       </nav>
     </header>
     <main>
-      <section id="hero">
-        <div class="hero-container">
+      <section id="banner">
+        <div class="banner-container">
           <div class="image-container">
             <div class="bg-img">
               <img src="./assets/microphone.png" alt="" />
               <span class="badge">new</span>
             </div>
           </div>
-          <div class="hero-content">
-            <h1 class="hero-head">TechWave</h1>
+          <div class="banner-content">
+            <h1 class="banner-head">TechWave</h1>
             <p class="text">
               Your daily dose of tech insights, productivity hacks, and personal
               growth
             </p>
-            <div class="hero-buttons">
-              <button class="hero-btn1 gradient flex">
+            <div class="banner-buttons">
+              <button class="banner-btn1 gradient flex">
                 <img
                   class="btn1-img"
                   src="./assets/spotify.png"
@@ -62,7 +62,7 @@
                 />
                 <p>Listen on Spotify</p>
               </button>
-              <button class="hero-btn2 flex">
+              <button class="banner-btn2 flex">
                 <img src="./assets/message.png" alt="message logo" />
                 <p>Subscribe</p>
               </button>
@@ -309,7 +309,7 @@
       </section>
     </main>
     <footer id="footer">
-      <div class="footer-container container ">
+      <div class="footer-container ">
         <h1 class="logo">Tech<span class="gradient">Wave</span></h1>
         <div class="brand-container">
            <ul>
@@ -339,7 +339,7 @@
             </li>
            </ul>  
         </div>
-        <p>© 2026 TechWave Podcast. All rights reserved.</p>
+        <p class="copy-right">© 2026 TechWave Podcast. All rights reserved.</p>
       </div>
     </footer>
   </body>
