button hover effect

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               growth
             </p>
             <div class="banner-buttons">
-              <button class="banner-btn1 gradient flex">
+              <button class="btn gradient flex">
                 <img
                   class="btn1-img"
                   src="./assets/spotify.png"
@@ -65,6 +65,7 @@
               <button class="banner-btn2 flex">
                 <img src="./assets/message.png" alt="message logo" />
                 <p>Subscribe</p>
+             
               </button>
             </div>
           </div>
