challenge section icon animation effect

--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
                 anyone looking to grow in tech.
               </p>
               <div class="social-logos">
-                <div><img src="./assets/linkedin.png" alt="" /></div>
-                <div><img src="./assets/x.png" alt="" /></div>
-                <div><img src="./assets/instagram.png" alt="" /></div>
-                <div><img src="./assets/youtube.png" alt="" /></div>
+                <div data-social="linkedin" style="--accent-color : #0A66C2" class="social-icon"><img src="./assets/linkedin.png" alt="linkedin" /></div>
+                <div data-social="twitter" style="--accent-color : black" class="social-icon"><img src="./assets/x.png" alt="X twitter" /></div>
+                <div data-social="instagram" style="--accent-color : #fe107c" class="social-icon"><img src="./assets/instagram.png" alt="instagram" /></div>
+                <div data-social="youtube" style="--accent-color : red" class="social-icon"><img src="./assets/youtube.png" alt="youtube" /></div>
               </div>
             </div>
           </div>
