fixed banner section background image setup

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="banner-container">
           <div class="image-container">
             <div class="bg-img">
-              <img src="./assets/microphone.png" alt="" />
+              <img src="./assets/microphone.png" alt="microphone" />
               <span class="badge">new</span>
             </div>
           </div>
@@ -65,7 +65,6 @@
               <button class="banner-btn2 flex">
                 <img src="./assets/message.png" alt="message logo" />
                 <p>Subscribe</p>
-             
               </button>
             </div>
           </div>
@@ -299,10 +298,34 @@
                 anyone looking to grow in tech.
               </p>
               <div class="social-logos">
-                <div data-social="linkedin" style="--accent-color : #0A66C2" class="social-icon"><img src="./assets/linkedin.png" alt="linkedin" /></div>
-                <div data-social="twitter" style="--accent-color : black" class="social-icon"><img src="./assets/x.png" alt="X twitter" /></div>
-                <div data-social="instagram" style="--accent-color : #fe107c" class="social-icon"><img src="./assets/instagram.png" alt="instagram" /></div>
-                <div data-social="youtube" style="--accent-color : red" class="social-icon"><img src="./assets/youtube.png" alt="youtube" /></div>
+                <div
+                  data-social="linkedin"
+                  style="--accent-color: #0a66c2"
+                  class="social-icon"
+                >
+                  <img src="./assets/linkedin.png" alt="linkedin" />
+                </div>
+                <div
+                  data-social="twitter"
+                  style="--accent-color: black"
+                  class="social-icon"
+                >
+                  <img src="./assets/x.png" alt="X twitter" />
+                </div>
+                <div
+                  data-social="instagram"
+                  style="--accent-color: #fe107c"
+                  class="social-icon"
+                >
+                  <img src="./assets/instagram.png" alt="instagram" />
+                </div>
+                <div
+                  data-social="youtube"
+                  style="--accent-color: red"
+                  class="social-icon"
+                >
+                  <img src="./assets/youtube.png" alt="youtube" />
+                </div>
               </div>
             </div>
           </div>
@@ -310,35 +333,35 @@
       </section>
     </main>
     <footer id="footer">
-      <div class="footer-container ">
+      <div class="footer-container">
         <h1 class="logo">Tech<span class="gradient">Wave</span></h1>
         <div class="brand-container">
-           <ul>
+          <ul>
             <li>
               <a href="#">
-                <img src="./assets/spotify.png" alt="">
+                <img src="./assets/spotify.png" alt="" />
                 <p>Spotify</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="./assets/apple-podcast.png" alt="">
+                <img src="./assets/apple-podcast.png" alt="" />
                 <p>Apple Podcasts</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="./assets/youtube-podcast.png" alt="">
+                <img src="./assets/youtube-podcast.png" alt="" />
                 <p>YouTube</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="./assets/twitter.png" alt="">
+                <img src="./assets/twitter.png" alt="" />
                 <p>Twitter</p>
               </a>
             </li>
-           </ul>  
+          </ul>
         </div>
         <p class="copy-right">© 2026 TechWave Podcast. All rights reserved.</p>
       </div>
