--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
       <section id="podcast">
         <div class="podcast-container container">
-          <h1>About the Podcast</h1>
+          <div class="podcast-content">
+            <h1>About the Podcast</h1>
           <p>
             TechWave is your go-to podcast for staying ahead in the fast-paced
             world of technology. <br />
@@ -85,6 +86,7 @@
             Join thousands of young professionals and tech enthusiasts who start
             their day with TechWave.
           </p>
+          </div>
           <div class="card-container flex">
             <div class="card">
               <h3>150K+</h3>
